--- a/execute-maps.ipynb
+++ b/execute-maps.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "cell_id": "00002-055fa27a-321e-4804-bb74-bfbc900f3efe",
     "deepnote_cell_type": "code",
@@ -53,34 +53,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: imageio==2.9.0 in /root/venv/lib/python3.7/site-packages (from -r requirements.txt (line 1)) (2.9.0)\n",
-      "Requirement already satisfied: mlxtend==0.18.0 in /root/venv/lib/python3.7/site-packages (from -r requirements.txt (line 2)) (0.18.0)\n",
-      "Requirement already satisfied: captum in /root/venv/lib/python3.7/site-packages (from -r requirements.txt (line 3)) (0.3.1)\n",
-      "Requirement already satisfied: torch in /shared-libs/python3.7/py/lib/python3.7/site-packages (from -r requirements.txt (line 4)) (1.7.1)\n",
-      "Requirement already satisfied: torchvision in /shared-libs/python3.7/py/lib/python3.7/site-packages (from -r requirements.txt (line 5)) (0.8.2)\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: torch in /home/gerasym/.local/lib/python3.8/site-packages (from -r requirements.txt (line 4)) (1.7.0)\n",
+      "Requirement already satisfied: torchvision in /home/gerasym/.local/lib/python3.8/site-packages (from -r requirements.txt (line 5)) (0.8.1)\n",
+      "Collecting imageio==2.9.0\n",
+      "  Downloading imageio-2.9.0-py3-none-any.whl (3.3 MB)\n",
+      "\u001b[K     |████████████████████████████████| 3.3 MB 2.5 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: pillow in /usr/lib/python3/dist-packages (from imageio==2.9.0->-r requirements.txt (line 1)) (7.0.0)\n",
+      "Requirement already satisfied: numpy in /home/gerasym/.local/lib/python3.8/site-packages (from imageio==2.9.0->-r requirements.txt (line 1)) (1.19.4)\n",
+      "Collecting mlxtend==0.18.0\n",
+      "  Downloading mlxtend-0.18.0-py2.py3-none-any.whl (1.3 MB)\n",
+      "\u001b[K     |████████████████████████████████| 1.3 MB 6.4 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: joblib>=0.13.2 in /home/gerasym/.local/lib/python3.8/site-packages (from mlxtend==0.18.0->-r requirements.txt (line 2)) (0.17.0)\n",
+      "Requirement already satisfied: scipy>=1.2.1 in /home/gerasym/.local/lib/python3.8/site-packages (from mlxtend==0.18.0->-r requirements.txt (line 2)) (1.5.4)\n",
+      "Requirement already satisfied: matplotlib>=3.0.0 in /home/gerasym/.local/lib/python3.8/site-packages (from mlxtend==0.18.0->-r requirements.txt (line 2)) (3.3.3)\n",
+      "Requirement already satisfied: scikit-learn>=0.20.3 in /home/gerasym/.local/lib/python3.8/site-packages (from mlxtend==0.18.0->-r requirements.txt (line 2)) (0.23.2)\n",
+      "Requirement already satisfied: setuptools in /usr/lib/python3/dist-packages (from mlxtend==0.18.0->-r requirements.txt (line 2)) (45.2.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /home/gerasym/.local/lib/python3.8/site-packages (from matplotlib>=3.0.0->mlxtend==0.18.0->-r requirements.txt (line 2)) (2.4.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/gerasym/.local/lib/python3.8/site-packages (from matplotlib>=3.0.0->mlxtend==0.18.0->-r requirements.txt (line 2)) (0.10.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/gerasym/.local/lib/python3.8/site-packages (from matplotlib>=3.0.0->mlxtend==0.18.0->-r requirements.txt (line 2)) (1.3.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3/dist-packages (from matplotlib>=3.0.0->mlxtend==0.18.0->-r requirements.txt (line 2)) (2.7.3)\n",
+      "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from cycler>=0.10->matplotlib>=3.0.0->mlxtend==0.18.0->-r requirements.txt (line 2)) (1.14.0)\n",
+      "Collecting pandas>=0.24.2\n",
+      "  Downloading pandas-1.2.2-cp38-cp38-manylinux1_x86_64.whl (9.7 MB)\n",
+      "\u001b[K     |████████████████████████████████| 9.7 MB 6.4 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: pytz>=2017.3 in /usr/lib/python3/dist-packages (from pandas>=0.24.2->mlxtend==0.18.0->-r requirements.txt (line 2)) (2019.3)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/gerasym/.local/lib/python3.8/site-packages (from scikit-learn>=0.20.3->mlxtend==0.18.0->-r requirements.txt (line 2)) (2.1.0)\n",
+      "Collecting captum\n",
+      "  Downloading captum-0.3.1-py3-none-any.whl (4.4 MB)\n",
+      "\u001b[K     |████████████████████████████████| 4.4 MB 6.5 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: future in /usr/lib/python3/dist-packages (from torch->-r requirements.txt (line 4)) (0.18.2)\n",
+      "Requirement already satisfied: typing-extensions in /home/gerasym/.local/lib/python3.8/site-packages (from torch->-r requirements.txt (line 4)) (3.7.4.3)\n",
+      "Requirement already satisfied: dataclasses in /home/gerasym/.local/lib/python3.8/site-packages (from torch->-r requirements.txt (line 4)) (0.6)\n",
       "Collecting fid_score\n",
       "  Downloading fid_score-0.1.3-py3-none-any.whl (6.5 kB)\n",
-      "Requirement already satisfied: pillow in /shared-libs/python3.7/py/lib/python3.7/site-packages (from imageio==2.9.0->-r requirements.txt (line 1)) (8.1.0)\n",
-      "Requirement already satisfied: numpy in /shared-libs/python3.7/py/lib/python3.7/site-packages (from imageio==2.9.0->-r requirements.txt (line 1)) (1.19.5)\n",
-      "Requirement already satisfied: matplotlib>=3.0.0 in /shared-libs/python3.7/py/lib/python3.7/site-packages (from mlxtend==0.18.0->-r requirements.txt (line 2)) (3.3.4)\n",
-      "Requirement already satisfied: joblib>=0.13.2 in /shared-libs/python3.7/py/lib/python3.7/site-packages (from mlxtend==0.18.0->-r requirements.txt (line 2)) (1.0.0)\n",
-      "Requirement already satisfied: setuptools in /root/venv/lib/python3.7/site-packages (from mlxtend==0.18.0->-r requirements.txt (line 2)) (47.1.0)\n",
-      "Requirement already satisfied: scipy>=1.2.1 in /shared-libs/python3.7/py/lib/python3.7/site-packages (from mlxtend==0.18.0->-r requirements.txt (line 2)) (1.6.0)\n",
-      "Requirement already satisfied: scikit-learn>=0.20.3 in /shared-libs/python3.7/py/lib/python3.7/site-packages (from mlxtend==0.18.0->-r requirements.txt (line 2)) (0.24.1)\n",
-      "Requirement already satisfied: pandas>=0.24.2 in /shared-libs/python3.7/py/lib/python3.7/site-packages (from mlxtend==0.18.0->-r requirements.txt (line 2)) (1.2.1)\n",
-      "Requirement already satisfied: typing-extensions in /shared-libs/python3.7/py-core/lib/python3.7/site-packages (from torch->-r requirements.txt (line 4)) (3.7.4.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in /shared-libs/python3.7/py/lib/python3.7/site-packages (from matplotlib>=3.0.0->mlxtend==0.18.0->-r requirements.txt (line 2)) (0.10.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /shared-libs/python3.7/py/lib/python3.7/site-packages (from matplotlib>=3.0.0->mlxtend==0.18.0->-r requirements.txt (line 2)) (1.3.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /shared-libs/python3.7/py-core/lib/python3.7/site-packages (from matplotlib>=3.0.0->mlxtend==0.18.0->-r requirements.txt (line 2)) (2.8.1)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /shared-libs/python3.7/py-core/lib/python3.7/site-packages (from matplotlib>=3.0.0->mlxtend==0.18.0->-r requirements.txt (line 2)) (2.4.7)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /shared-libs/python3.7/py/lib/python3.7/site-packages (from scikit-learn>=0.20.3->mlxtend==0.18.0->-r requirements.txt (line 2)) (2.1.0)\n",
-      "Requirement already satisfied: pytz>=2017.3 in /shared-libs/python3.7/py/lib/python3.7/site-packages (from pandas>=0.24.2->mlxtend==0.18.0->-r requirements.txt (line 2)) (2021.1)\n",
-      "Requirement already satisfied: six in /shared-libs/python3.7/py-core/lib/python3.7/site-packages (from cycler>=0.10->matplotlib>=3.0.0->mlxtend==0.18.0->-r requirements.txt (line 2)) (1.15.0)\n",
-      "\u001b[31mERROR: fid-score 0.1.3 has requirement scipy==1.3.2, but you'll have scipy 1.6.0 which is incompatible.\u001b[0m\n",
-      "Installing collected packages: fid-score\n",
-      "Successfully installed fid-score-0.1.3\n",
-      "\u001b[33mWARNING: You are using pip version 20.1.1; however, version 21.0.1 is available.\n",
-      "You should consider upgrading via the '/root/venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+      "Collecting scipy>=1.2.1\n",
+      "  Downloading scipy-1.3.2-cp38-cp38-manylinux1_x86_64.whl (25.2 MB)\n",
+      "\u001b[K     |████████████████████████████████| 25.2 MB 6.1 MB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: scipy, pandas, mlxtend, imageio, fid-score, captum\n",
+      "  Attempting uninstall: scipy\n",
+      "    Found existing installation: scipy 1.5.4\n",
+      "    Uninstalling scipy-1.5.4:\n",
+      "      Successfully uninstalled scipy-1.5.4\n",
+      "Successfully installed captum-0.3.1 fid-score-0.1.3 imageio-2.9.0 mlxtend-0.18.0 pandas-1.2.2 scipy-1.3.2\n",
+      "\u001b[33mWARNING: You are using pip version 20.3.3; however, version 21.0.1 is available.\n",
+      "You should consider upgrading via the '/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -96,12 +113,12 @@
     "tags": []
    },
    "source": [
-    "## H2Z\n"
+    "## CycleGAN Maps \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "cell_id": "00004-69591244-834e-497c-9fa0-2eb3d0f0c2dc",
     "deepnote_cell_type": "code",
@@ -114,12 +131,13 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/shared-libs/python3.7/py/lib/python3.7/site-packages/torch/cuda/__init__.py:52: UserWarning: CUDA initialization: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx (Triggered internally at  /pytorch/c10/cuda/CUDAFunctions.cpp:100.)\n",
-      "  return torch._C._cuda_getDeviceCount() > 0\n",
-      "Downloading: \"https://download.pytorch.org/models/maskrcnn_resnet50_fpn_coco-bf2d0c1e.pth\" to /root/.cache/torch/hub/checkpoints/maskrcnn_resnet50_fpn_coco-bf2d0c1e.pth\n"
+      "the device ist at\n",
+      "cuda\n",
+      "should models to cuda\n",
+      "device == cuda -> False\n"
      ]
     }
    ],
@@ -160,24 +178,38 @@
     "discA  = models.Discriminator(input_nc=3)\n",
     "discB  = models.Discriminator(input_nc=3)\n",
     "classifier = models.Classifier().net\n",
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "root_path_data = \"./data/horse2zebra\"\n",
-    "root_path_checkpoints = \"./checkpoints/horse2zebra\"\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "databaseName = \"maps\"\n",
+    "root_path_data = \"./data/\"+databaseName\n",
+    "root_path_checkpoints = \"./checkpoints/\"+databaseName\n",
     "\n",
-    "targetEpoch = 100\n",
+    "targetEpoch = 50\n",
+    "saveAt = 1 #how often to store the model at training\n",
+    "print(\"the device ist at\")\n",
+    "print(device)\n",
+    "\n",
+    "if device == torch.device(\"cuda\"):\n",
+    "    #debug\n",
+    "    print(\"should models to cuda\")\n",
+    "    print(\"device == cuda -> \"+ str(device == \"cuda:0\"))\n",
+    "    #model.load_state_dict(torch.load(\"{}/{} epoch{}\".format(path, name, epoch)))\n",
+    "else:\n",
+    "    #debug\n",
+    "    print(\"should models to cpu\")\n",
+    "    print(\"device == cuda -> \"+ str(device == \"cuda:0\"))\n",
+    "    #model.load_state_dict(torch.load(\"{}/{} epoch{}\".format(path, name, epoch),map_location=torch.device('cpu')))\n",
     "\n",
     "cycle  = models.CycleGAN(genA2B, genB2A, discA, discB, classifier, device, root_path_data, root_path_checkpoints)\n",
     "\n",
     "\n",
-    "# parameter comibination tested for this milestone\n",
-    "param_train1  = models.Param(channels = 3, epochs = targetEpoch, size= 256,  name =\"cycle_r9_advMSE_l10\", resnet_blocks=9, loss_adv=torch.nn.MSELoss(), lambdas=(10,0.5)) # default\n",
-    "param_train2  = models.Param(channels = 3, epochs = targetEpoch, size= 256,  name =\"cycle_r9_advMSE_l5\" , resnet_blocks=9, loss_adv=torch.nn.MSELoss(), lambdas=(5,0.5))\n",
-    "param_train3  = models.Param(channels = 3, epochs = targetEpoch, size= 256,  name =\"cycle_r9_advL1_l10\", resnet_blocks=9, loss_adv=torch.nn.L1Loss(), lambdas=(10,0.5))\n",
-    "param_train4  = models.Param(channels = 3, epochs = targetEpoch, size= 256,  name =\"cycle_r9_advL1_l5\" , resnet_blocks=9, loss_adv=torch.nn.L1Loss(), lambdas=(5,0.5))\n",
-    "param_train5  = models.Param(channels = 3, epochs = targetEpoch, size= 256,  name =\"cycle_r5_advMSE_l10\", resnet_blocks=5, loss_adv=torch.nn.MSELoss(), lambdas=(10,0.5))\n",
-    "param_train6  = models.Param(channels = 3, epochs = targetEpoch, size= 256,  name =\"cycle_r5_advMSE_l5\" , resnet_blocks=5, loss_adv=torch.nn.MSELoss(), lambdas=(5,0.5))\n",
-    "param_train7  = models.Param(channels = 3, epochs = targetEpoch, size= 256,  name =\"cycle_r5_advL1_l10\", resnet_blocks=5, loss_adv=torch.nn.L1Loss(), lambdas=(10,0.5))\n",
-    "param_train8  = models.Param(channels = 3, epochs = targetEpoch, size= 256,  name =\"cycle_r5_advL1_l5\" , resnet_blocks=5, loss_adv=torch.nn.L1Loss(), lambdas=(5,0.5))\n",
+    "param_train1  = models.Param(channels = 3, epochs = targetEpoch, saveEpoch = saveAt, size= 256,  name =\"cycle_r9_advMSE_l10\", resnet_blocks=9, loss_adv=torch.nn.MSELoss(), lambdas=(10,0.5)) # default\n",
+    "param_train2  = models.Param(channels = 3, epochs = targetEpoch, saveEpoch = saveAt, size= 256,  name =\"cycle_r9_advMSE_l5\" , resnet_blocks=9, loss_adv=torch.nn.MSELoss(), lambdas=(5,0.5))\n",
+    "param_train3  = models.Param(channels = 3, epochs = targetEpoch, saveEpoch = saveAt, size= 256,  name =\"cycle_r9_advL1_l10\", resnet_blocks=9, loss_adv=torch.nn.L1Loss(), lambdas=(10,0.5))\n",
+    "param_train4  = models.Param(channels = 3, epochs = targetEpoch, saveEpoch = saveAt, size= 256,  name =\"cycle_r9_advL1_l5\" , resnet_blocks=9, loss_adv=torch.nn.L1Loss(), lambdas=(5,0.5))\n",
+    "param_train5  = models.Param(channels = 3, epochs = targetEpoch, saveEpoch = saveAt, size= 256,  name =\"cycle_r5_advMSE_l10\", resnet_blocks=5, loss_adv=torch.nn.MSELoss(), lambdas=(10,0.5))\n",
+    "param_train6  = models.Param(channels = 3, epochs = targetEpoch, saveEpoch = saveAt, size= 256,  name =\"cycle_r5_advMSE_l5\" , resnet_blocks=5, loss_adv=torch.nn.MSELoss(), lambdas=(5,0.5))\n",
+    "param_train7  = models.Param(channels = 3, epochs = targetEpoch, saveEpoch = saveAt, size= 256,  name =\"cycle_r5_advL1_l10\", resnet_blocks=5, loss_adv=torch.nn.L1Loss(), lambdas=(10,0.5))\n",
+    "param_train8  = models.Param(channels = 3, epochs = targetEpoch, saveEpoch = saveAt, size= 256,  name =\"cycle_r5_advL1_l5\" , resnet_blocks=5, loss_adv=torch.nn.L1Loss(), lambdas=(5,0.5))\n",
     "param_train_cycle_list = [param_train1, param_train2, param_train3, param_train4, param_train5, param_train6, param_train7, param_train8]\n",
     "\n",
     "# paramter to load the background error verison. since this extension needed major changes in training/loaded training was done locally.\n",
@@ -188,6 +220,41 @@
     "\n",
     "# parameters used for training the classifier\n",
     "param_train_classifier = models.Param(channels = 3, epochs = targetEpoch, size = 256, name = \"classifier_test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading models to cuda\n",
+      "loading models to cuda\n",
+      "loading models to cuda\n",
+      "loading models to cuda\n",
+      "cuda\n",
+      "creating save folder: ./data/maps/evalA  and  ./data/maps/evalB\n",
+      "finished domain A\n",
+      "finished domain B\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for every model --TODO\n",
+    "paramItem = param_train_cycle_list[0]\n",
+    "#load model\n",
+    "cycle.load_cycle_nets(epoch = 50, model_name = paramItem.name)\n",
+    "print(device)\n",
+    "#generate for every test image some output image\n",
+    "cycle._create_evalset_paired(paramItem,name=\"eval\")\n",
+    "#calculate error with expected image\n",
+    "\n",
+    "#compare errors between models\n",
+    "\n",
+    "#run pix2pix ? and compare it with that?\n"
    ]
   },
   {
