--- a/execute-maps.ipynb
+++ b/execute-maps.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {
     "cell_id": "00004-69591244-834e-497c-9fa0-2eb3d0f0c2dc",
     "deepnote_cell_type": "code",
@@ -261,7 +261,6 @@
       "loading models to cuda\n",
       "loading models to cuda\n",
       "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r9_advMSE_l10  and  ./data/maps/evalB/cycle_r9_advMSE_l10\n",
       "finished domain A\n",
       "finished domain B\n",
       "loading models to cuda\n",
@@ -269,79 +268,6 @@
       "loading models to cuda\n",
       "loading models to cuda\n",
       "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r9_advMSE_l5  and  ./data/maps/evalB/cycle_r9_advMSE_l5\n",
-      "finished domain A\n",
-      "finished domain B\n",
-      "loading models to cuda\n",
-      "An error occured while loading the model:\n",
-      "./checkpoints/maps/netG_A2Bcycle_r9_advL1_l10 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netG_A2Bcycle_r9_advL1_l10 epoch100'\n",
-      "loading models to cuda\n",
-      "An error occured while loading the model:\n",
-      "./checkpoints/maps/netG_B2Acycle_r9_advL1_l10 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netG_B2Acycle_r9_advL1_l10 epoch100'\n",
-      "loading models to cuda\n",
-      "An error occured while loading the model:\n",
-      "./checkpoints/maps/netD_Acycle_r9_advL1_l10 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netD_Acycle_r9_advL1_l10 epoch100'\n",
-      "loading models to cuda\n",
-      "An error occured while loading the model:\n",
-      "./checkpoints/maps/netD_Bcycle_r9_advL1_l10 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netD_Bcycle_r9_advL1_l10 epoch100'\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r9_advL1_l10  and  ./data/maps/evalB/cycle_r9_advL1_l10\n",
-      "finished domain A\n",
-      "finished domain B\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r9_advL1_l5  and  ./data/maps/evalB/cycle_r9_advL1_l5\n",
-      "finished domain A\n",
-      "finished domain B\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r5_advMSE_l10  and  ./data/maps/evalB/cycle_r5_advMSE_l10\n",
-      "finished domain A\n",
-      "finished domain B\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r5_advMSE_l5  and  ./data/maps/evalB/cycle_r5_advMSE_l5\n",
-      "finished domain A\n",
-      "finished domain B\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r5_advL1_l10  and  ./data/maps/evalB/cycle_r5_advL1_l10\n",
-      "finished domain A\n",
-      "finished domain B\n",
-      "loading models to cuda\n",
-      "An error occured while loading the model:\n",
-      "./checkpoints/maps/netG_A2Bcycle_r5_advL1_l5 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netG_A2Bcycle_r5_advL1_l5 epoch100'\n",
-      "loading models to cuda\n",
-      "An error occured while loading the model:\n",
-      "./checkpoints/maps/netG_B2Acycle_r5_advL1_l5 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netG_B2Acycle_r5_advL1_l5 epoch100'\n",
-      "loading models to cuda\n",
-      "An error occured while loading the model:\n",
-      "./checkpoints/maps/netD_Acycle_r5_advL1_l5 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netD_Acycle_r5_advL1_l5 epoch100'\n",
-      "loading models to cuda\n",
-      "An error occured while loading the model:\n",
-      "./checkpoints/maps/netD_Bcycle_r5_advL1_l5 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netD_Bcycle_r5_advL1_l5 epoch100'\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r5_advL1_l5  and  ./data/maps/evalB/cycle_r5_advL1_l5\n",
       "finished domain A\n",
       "finished domain B\n"
      ]
@@ -349,7 +275,8 @@
    ],
    "source": [
     "#for every model --TODO\n",
-    "for paramItem in param_train_cycle_list:\n",
+    "#for paramItem in param_train_cycle_list:\n",
+    "for paramItem in [param_train3,param_train8]:\n",
     "    #load model\n",
     "    cycle.load_cycle_nets(epoch = 100, model_name = paramItem.name)\n",
     "    print(device)\n",
@@ -371,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +322,7 @@
     "            exp=\"{}{}_expected.jpg\".format(folder, i)\n",
     "            gen=Image.open(gen)\n",
     "            exp=Image.open(exp)\n",
-    "            loss=functions.calcL1(gen,exp)\n",
+    "            loss=functions.calcMSE(gen,exp)\n",
     "            losses[paramItem.name][source].append(loss)\n",
     "    "
    ]
@@ -409,7 +336,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "param:cycle_r9_advMSE_l10 \t source:A \t std:0.0058 \t sum:5.51 \t overall:46.03\n",
+      "param:cycle_r9_advMSE_l10 \t source:B \t std:0.0114 \t sum:40.52 \t overall:46.03\n",
+      "param:cycle_r9_advMSE_l5 \t source:A \t std:0.0055 \t sum:5.39 \t overall:45.65\n",
+      "param:cycle_r9_advMSE_l5 \t source:B \t std:0.0115 \t sum:40.26 \t overall:45.65\n",
+      "param:cycle_r9_advL1_l10 \t source:A \t std:0.0054 \t sum:5.35 \t overall:49.64\n",
+      "param:cycle_r9_advL1_l10 \t source:B \t std:0.0119 \t sum:44.29 \t overall:49.64\n",
+      "param:cycle_r9_advL1_l5 \t source:A \t std:0.0056 \t sum:5.49 \t overall:49.93\n",
+      "param:cycle_r9_advL1_l5 \t source:B \t std:0.0120 \t sum:44.44 \t overall:49.93\n",
+      "param:cycle_r5_advMSE_l10 \t source:A \t std:0.0054 \t sum:5.31 \t overall:45.62\n",
+      "param:cycle_r5_advMSE_l10 \t source:B \t std:0.0120 \t sum:40.31 \t overall:45.62\n",
+      "param:cycle_r5_advMSE_l5 \t source:A \t std:0.0054 \t sum:5.40 \t overall:44.33\n",
+      "param:cycle_r5_advMSE_l5 \t source:B \t std:0.0107 \t sum:38.93 \t overall:44.33\n",
+      "param:cycle_r5_advL1_l10 \t source:A \t std:0.0055 \t sum:5.53 \t overall:46.46\n",
+      "param:cycle_r5_advL1_l10 \t source:B \t std:0.0116 \t sum:40.94 \t overall:46.46\n",
+      "param:cycle_r5_advL1_l5 \t source:A \t std:0.0052 \t sum:5.13 \t overall:48.49\n",
+      "param:cycle_r5_advL1_l5 \t source:B \t std:0.0116 \t sum:43.36 \t overall:48.49\n"
+     ]
+    }
+   ],
+   "source": [
+    "for paramItem in param_train_cycle_list:\n",
+    "    source_domains = [\"A\", \"B\"]\n",
+    "    for source in source_domains:\n",
+    "        summ = np.array(losses[paramItem.name][source]).sum()\n",
+    "        std = np.std(losses[paramItem.name][source])\n",
+    "        overall = np.array(losses[paramItem.name]['A']).sum() + np.array(losses[paramItem.name]['B']).sum()\n",
+    "        print(\"param:{} \\t source:{} \\t std:{:.4f} \\t sum:{:.2f} \\t overall:{:.2f}\".format(paramItem.name,source,std,summ,overall))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -420,8 +385,8 @@
       "param:cycle_r9_advMSE_l10 source:B std:0.027450 sum:157.983000 overall:200.31400000000002\n",
       "param:cycle_r9_advMSE_l5 source:A std:0.019033 sum:41.606000 overall:198.77599999999998\n",
       "param:cycle_r9_advMSE_l5 source:B std:0.027498 sum:157.170000 overall:198.77599999999998\n",
-      "param:cycle_r9_advL1_l10 source:A std:0.019033 sum:41.606000 overall:198.77599999999998\n",
-      "param:cycle_r9_advL1_l10 source:B std:0.027498 sum:157.170000 overall:198.77599999999998\n",
+      "param:cycle_r9_advL1_l10 source:A std:0.018360 sum:41.249000 overall:205.97\n",
+      "param:cycle_r9_advL1_l10 source:B std:0.027445 sum:164.721000 overall:205.97\n",
       "param:cycle_r9_advL1_l5 source:A std:0.018212 sum:40.860000 overall:205.512\n",
       "param:cycle_r9_advL1_l5 source:B std:0.027137 sum:164.652000 overall:205.512\n",
       "param:cycle_r5_advMSE_l10 source:A std:0.017783 sum:41.123000 overall:198.801\n",
@@ -430,8 +395,8 @@
       "param:cycle_r5_advMSE_l5 source:B std:0.025475 sum:154.888000 overall:196.74\n",
       "param:cycle_r5_advL1_l10 source:A std:0.019074 sum:42.191000 overall:201.615\n",
       "param:cycle_r5_advL1_l10 source:B std:0.027110 sum:159.424000 overall:201.615\n",
-      "param:cycle_r5_advL1_l5 source:A std:0.019074 sum:42.191000 overall:201.615\n",
-      "param:cycle_r5_advL1_l5 source:B std:0.027110 sum:159.424000 overall:201.615\n"
+      "param:cycle_r5_advL1_l5 source:A std:0.016964 sum:40.414000 overall:203.21800000000002\n",
+      "param:cycle_r5_advL1_l5 source:B std:0.027058 sum:162.804000 overall:203.21800000000002\n"
      ]
     }
    ],
