latest cityscapes try

--- a/execute-cityscapes.ipynb
+++ b/execute-cityscapes.ipynb
@@ -132,7 +132,7 @@
     "root_path_data = \"./data/\"+databaseName\n",
     "root_path_checkpoints = \"./checkpoints/\"+databaseName\n",
     "\n",
-    "targetEpoch = 2\n",
+    "targetEpoch = 50\n",
     "saveAt = 1 #how often to store the model at training\n",
     "print(\"the device ist at\")\n",
     "print(device)\n",
@@ -12505,92 +12505,132 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r9_advMSE_l10  and  ./data/maps/evalB/cycle_r9_advMSE_l10\n",
+      "loading models to cpu\n",
+      "loading models to cpu\n",
+      "loading models to cpu\n",
+      "loading models to cpu\n",
+      "cpu\n",
       "finished domain A\n",
       "finished domain B\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r9_advMSE_l5  and  ./data/maps/evalB/cycle_r9_advMSE_l5\n",
+      "loading models to cpu\n",
+      "loading models to cpu\n",
+      "loading models to cpu\n",
+      "loading models to cpu\n",
+      "cpu\n",
       "finished domain A\n",
       "finished domain B\n",
-      "loading models to cuda\n",
+      "loading models to cpu\n",
       "An error occured while loading the model:\n",
-      "./checkpoints/maps/netG_A2Bcycle_r9_advL1_l10 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netG_A2Bcycle_r9_advL1_l10 epoch100'\n",
-      "loading models to cuda\n",
+      "./checkpoints/cityscapes/netG_A2Bcycle_r9_advL1_l10 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netG_A2Bcycle_r9_advL1_l10 epoch50'\n",
+      "loading models to cpu\n",
       "An error occured while loading the model:\n",
-      "./checkpoints/maps/netG_B2Acycle_r9_advL1_l10 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netG_B2Acycle_r9_advL1_l10 epoch100'\n",
-      "loading models to cuda\n",
+      "./checkpoints/cityscapes/netG_B2Acycle_r9_advL1_l10 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netG_B2Acycle_r9_advL1_l10 epoch50'\n",
+      "loading models to cpu\n",
       "An error occured while loading the model:\n",
-      "./checkpoints/maps/netD_Acycle_r9_advL1_l10 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netD_Acycle_r9_advL1_l10 epoch100'\n",
-      "loading models to cuda\n",
+      "./checkpoints/cityscapes/netD_Acycle_r9_advL1_l10 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netD_Acycle_r9_advL1_l10 epoch50'\n",
+      "loading models to cpu\n",
       "An error occured while loading the model:\n",
-      "./checkpoints/maps/netD_Bcycle_r9_advL1_l10 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netD_Bcycle_r9_advL1_l10 epoch100'\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r9_advL1_l10  and  ./data/maps/evalB/cycle_r9_advL1_l10\n",
+      "./checkpoints/cityscapes/netD_Bcycle_r9_advL1_l10 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netD_Bcycle_r9_advL1_l10 epoch50'\n",
+      "cpu\n",
       "finished domain A\n",
       "finished domain B\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r9_advL1_l5  and  ./data/maps/evalB/cycle_r9_advL1_l5\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netG_A2Bcycle_r9_advL1_l5 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netG_A2Bcycle_r9_advL1_l5 epoch50'\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netG_B2Acycle_r9_advL1_l5 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netG_B2Acycle_r9_advL1_l5 epoch50'\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netD_Acycle_r9_advL1_l5 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netD_Acycle_r9_advL1_l5 epoch50'\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netD_Bcycle_r9_advL1_l5 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netD_Bcycle_r9_advL1_l5 epoch50'\n",
+      "cpu\n",
       "finished domain A\n",
       "finished domain B\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r5_advMSE_l10  and  ./data/maps/evalB/cycle_r5_advMSE_l10\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netG_A2Bcycle_r5_advMSE_l10 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netG_A2Bcycle_r5_advMSE_l10 epoch50'\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netG_B2Acycle_r5_advMSE_l10 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netG_B2Acycle_r5_advMSE_l10 epoch50'\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netD_Acycle_r5_advMSE_l10 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netD_Acycle_r5_advMSE_l10 epoch50'\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netD_Bcycle_r5_advMSE_l10 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netD_Bcycle_r5_advMSE_l10 epoch50'\n",
+      "cpu\n",
       "finished domain A\n",
       "finished domain B\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r5_advMSE_l5  and  ./data/maps/evalB/cycle_r5_advMSE_l5\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netG_A2Bcycle_r5_advMSE_l5 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netG_A2Bcycle_r5_advMSE_l5 epoch50'\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netG_B2Acycle_r5_advMSE_l5 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netG_B2Acycle_r5_advMSE_l5 epoch50'\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netD_Acycle_r5_advMSE_l5 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netD_Acycle_r5_advMSE_l5 epoch50'\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netD_Bcycle_r5_advMSE_l5 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netD_Bcycle_r5_advMSE_l5 epoch50'\n",
+      "cpu\n",
       "finished domain A\n",
       "finished domain B\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "loading models to cuda\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r5_advL1_l10  and  ./data/maps/evalB/cycle_r5_advL1_l10\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netG_A2Bcycle_r5_advL1_l10 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netG_A2Bcycle_r5_advL1_l10 epoch50'\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netG_B2Acycle_r5_advL1_l10 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netG_B2Acycle_r5_advL1_l10 epoch50'\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netD_Acycle_r5_advL1_l10 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netD_Acycle_r5_advL1_l10 epoch50'\n",
+      "loading models to cpu\n",
+      "An error occured while loading the model:\n",
+      "./checkpoints/cityscapes/netD_Bcycle_r5_advL1_l10 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netD_Bcycle_r5_advL1_l10 epoch50'\n",
+      "cpu\n",
       "finished domain A\n",
       "finished domain B\n",
-      "loading models to cuda\n",
+      "loading models to cpu\n",
       "An error occured while loading the model:\n",
-      "./checkpoints/maps/netG_A2Bcycle_r5_advL1_l5 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netG_A2Bcycle_r5_advL1_l5 epoch100'\n",
-      "loading models to cuda\n",
+      "./checkpoints/cityscapes/netG_A2Bcycle_r5_advL1_l5 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netG_A2Bcycle_r5_advL1_l5 epoch50'\n",
+      "loading models to cpu\n",
       "An error occured while loading the model:\n",
-      "./checkpoints/maps/netG_B2Acycle_r5_advL1_l5 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netG_B2Acycle_r5_advL1_l5 epoch100'\n",
-      "loading models to cuda\n",
+      "./checkpoints/cityscapes/netG_B2Acycle_r5_advL1_l5 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netG_B2Acycle_r5_advL1_l5 epoch50'\n",
+      "loading models to cpu\n",
       "An error occured while loading the model:\n",
-      "./checkpoints/maps/netD_Acycle_r5_advL1_l5 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netD_Acycle_r5_advL1_l5 epoch100'\n",
-      "loading models to cuda\n",
+      "./checkpoints/cityscapes/netD_Acycle_r5_advL1_l5 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netD_Acycle_r5_advL1_l5 epoch50'\n",
+      "loading models to cpu\n",
       "An error occured while loading the model:\n",
-      "./checkpoints/maps/netD_Bcycle_r5_advL1_l5 epoch100\n",
-      "[Errno 2] No such file or directory: './checkpoints/maps/netD_Bcycle_r5_advL1_l5 epoch100'\n",
-      "cuda\n",
-      "creating save folder: ./data/maps/evalA/cycle_r5_advL1_l5  and  ./data/maps/evalB/cycle_r5_advL1_l5\n",
+      "./checkpoints/cityscapes/netD_Bcycle_r5_advL1_l5 epoch50\n",
+      "[Errno 2] No such file or directory: './checkpoints/cityscapes/netD_Bcycle_r5_advL1_l5 epoch50'\n",
+      "cpu\n",
       "finished domain A\n",
       "finished domain B\n"
      ]
@@ -12600,7 +12640,7 @@
     "#for every model --TODO\n",
     "for paramItem in param_train_cycle_list:\n",
     "    #load model\n",
-    "    cycle.load_cycle_nets(epoch = 100, model_name = paramItem.name)\n",
+    "    cycle.load_cycle_nets(epoch = 50, model_name = paramItem.name)\n",
     "    print(device)\n",
     "    #generate for every test image some output image\n",
     "    cycle._create_evalset_paired(paramItem,subfolder=paramItem.name)\n",
@@ -12620,7 +12660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12644,7 +12684,7 @@
     "            exp=\"{}{}_expected.jpg\".format(folder, i)\n",
     "            gen=Image.open(gen)\n",
     "            exp=Image.open(exp)\n",
-    "            loss=functions.calcL1(gen,exp)\n",
+    "            loss=functions.calcMSE(gen,exp)\n",
     "            losses[paramItem.name][source].append(loss)\n",
     "    "
    ]
@@ -12658,29 +12698,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "param:cycle_r9_advMSE_l10 source:A std:0.020727 sum:42.331000 overall:200.31400000000002\n",
-      "param:cycle_r9_advMSE_l10 source:B std:0.027450 sum:157.983000 overall:200.31400000000002\n",
-      "param:cycle_r9_advMSE_l5 source:A std:0.019033 sum:41.606000 overall:198.77599999999998\n",
-      "param:cycle_r9_advMSE_l5 source:B std:0.027498 sum:157.170000 overall:198.77599999999998\n",
-      "param:cycle_r9_advL1_l10 source:A std:0.019033 sum:41.606000 overall:198.77599999999998\n",
-      "param:cycle_r9_advL1_l10 source:B std:0.027498 sum:157.170000 overall:198.77599999999998\n",
-      "param:cycle_r9_advL1_l5 source:A std:0.018212 sum:40.860000 overall:205.512\n",
-      "param:cycle_r9_advL1_l5 source:B std:0.027137 sum:164.652000 overall:205.512\n",
-      "param:cycle_r5_advMSE_l10 source:A std:0.017783 sum:41.123000 overall:198.801\n",
-      "param:cycle_r5_advMSE_l10 source:B std:0.028439 sum:157.678000 overall:198.801\n",
-      "param:cycle_r5_advMSE_l5 source:A std:0.018145 sum:41.852000 overall:196.74\n",
-      "param:cycle_r5_advMSE_l5 source:B std:0.025475 sum:154.888000 overall:196.74\n",
-      "param:cycle_r5_advL1_l10 source:A std:0.019074 sum:42.191000 overall:201.615\n",
-      "param:cycle_r5_advL1_l10 source:B std:0.027110 sum:159.424000 overall:201.615\n",
-      "param:cycle_r5_advL1_l5 source:A std:0.019074 sum:42.191000 overall:201.615\n",
-      "param:cycle_r5_advL1_l5 source:B std:0.027110 sum:159.424000 overall:201.615\n"
+      "param:cycle_r9_advMSE_l10 \t source:A \t std:0.0147 \t sum:20.06 \t overall:37.00\n",
+      "param:cycle_r9_advMSE_l10 \t source:B \t std:0.0187 \t sum:16.94 \t overall:37.00\n",
+      "param:cycle_r9_advMSE_l5 \t source:A \t std:0.0143 \t sum:25.65 \t overall:47.33\n",
+      "param:cycle_r9_advMSE_l5 \t source:B \t std:0.0219 \t sum:21.68 \t overall:47.33\n",
+      "param:cycle_r9_advL1_l10 \t source:A \t std:0.0152 \t sum:24.43 \t overall:50.35\n",
+      "param:cycle_r9_advL1_l10 \t source:B \t std:0.0246 \t sum:25.93 \t overall:50.35\n",
+      "param:cycle_r9_advL1_l5 \t source:A \t std:0.0140 \t sum:23.72 \t overall:48.56\n",
+      "param:cycle_r9_advL1_l5 \t source:B \t std:0.0244 \t sum:24.84 \t overall:48.56\n",
+      "param:cycle_r5_advMSE_l10 \t source:A \t std:0.0146 \t sum:25.27 \t overall:50.48\n",
+      "param:cycle_r5_advMSE_l10 \t source:B \t std:0.0231 \t sum:25.22 \t overall:50.48\n",
+      "param:cycle_r5_advMSE_l5 \t source:A \t std:0.0137 \t sum:24.20 \t overall:45.66\n",
+      "param:cycle_r5_advMSE_l5 \t source:B \t std:0.0224 \t sum:21.46 \t overall:45.66\n",
+      "param:cycle_r5_advL1_l10 \t source:A \t std:0.0143 \t sum:24.65 \t overall:49.80\n",
+      "param:cycle_r5_advL1_l10 \t source:B \t std:0.0212 \t sum:25.14 \t overall:49.80\n",
+      "param:cycle_r5_advL1_l5 \t source:A \t std:0.0153 \t sum:24.82 \t overall:48.06\n",
+      "param:cycle_r5_advL1_l5 \t source:B \t std:0.0235 \t sum:23.24 \t overall:48.06\n"
      ]
     }
    ],
@@ -12691,34 +12731,34 @@
     "        summ = np.array(losses[paramItem.name][source]).sum()\n",
     "        std = np.std(losses[paramItem.name][source])\n",
     "        overall = np.array(losses[paramItem.name]['A']).sum() + np.array(losses[paramItem.name]['B']).sum()\n",
-    "        print(\"param:{} source:{} std:{:2f} sum:{:0f} overall:{}\".format(paramItem.name,source,std,summ,overall))"
+    "        print(\"param:{} \\t source:{} \\t std:{:.4f} \\t sum:{:.2f} \\t overall:{:.2f}\".format(paramItem.name,source,std,summ,overall))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "param:cycle_r9_advMSE_l10 source:A std:0.021128 sum:44.468000 overall:207.642\n",
-      "param:cycle_r9_advMSE_l10 source:B std:0.027676 sum:163.174000 overall:207.642\n",
-      "param:cycle_r9_advMSE_l5 source:A std:0.018349 sum:41.879000 overall:212.426\n",
-      "param:cycle_r9_advMSE_l5 source:B std:0.027998 sum:170.547000 overall:212.426\n",
-      "param:cycle_r9_advL1_l10 source:A std:0.020923 sum:43.669000 overall:201.413\n",
-      "param:cycle_r9_advL1_l10 source:B std:0.026593 sum:157.744000 overall:201.413\n",
-      "param:cycle_r9_advL1_l5 source:A std:0.017752 sum:45.098000 overall:202.21200000000002\n",
-      "param:cycle_r9_advL1_l5 source:B std:0.026540 sum:157.114000 overall:202.21200000000002\n",
-      "param:cycle_r5_advMSE_l10 source:A std:0.023278 sum:45.731000 overall:211.471\n",
-      "param:cycle_r5_advMSE_l10 source:B std:0.028075 sum:165.740000 overall:211.471\n",
-      "param:cycle_r5_advMSE_l5 source:A std:0.021359 sum:44.727000 overall:205.86300000000003\n",
-      "param:cycle_r5_advMSE_l5 source:B std:0.027667 sum:161.136000 overall:205.86300000000003\n",
-      "param:cycle_r5_advL1_l10 source:A std:0.018759 sum:43.503000 overall:211.39600000000002\n",
-      "param:cycle_r5_advL1_l10 source:B std:0.026640 sum:167.893000 overall:211.39600000000002\n",
-      "param:cycle_r5_advL1_l5 source:A std:0.017791 sum:41.876000 overall:199.67000000000002\n",
-      "param:cycle_r5_advL1_l5 source:B std:0.026495 sum:157.794000 overall:199.67000000000002\n"
+      "param:cycle_r9_advMSE_l10 source:A std:0.031439 sum:67.284000 overall:151.08299999999997\n",
+      "param:cycle_r9_advMSE_l10 source:B std:0.042867 sum:83.799000 overall:151.08299999999997\n",
+      "param:cycle_r9_advMSE_l5 source:A std:0.030743 sum:67.930000 overall:148.739\n",
+      "param:cycle_r9_advMSE_l5 source:B std:0.042452 sum:80.809000 overall:148.739\n",
+      "param:cycle_r9_advL1_l10 source:A std:0.030743 sum:67.930000 overall:148.739\n",
+      "param:cycle_r9_advL1_l10 source:B std:0.042452 sum:80.809000 overall:148.739\n",
+      "param:cycle_r9_advL1_l5 source:A std:0.030743 sum:67.930000 overall:148.739\n",
+      "param:cycle_r9_advL1_l5 source:B std:0.042452 sum:80.809000 overall:148.739\n",
+      "param:cycle_r5_advMSE_l10 source:A std:0.030743 sum:67.930000 overall:148.739\n",
+      "param:cycle_r5_advMSE_l10 source:B std:0.042452 sum:80.809000 overall:148.739\n",
+      "param:cycle_r5_advMSE_l5 source:A std:0.030743 sum:67.930000 overall:148.739\n",
+      "param:cycle_r5_advMSE_l5 source:B std:0.042452 sum:80.809000 overall:148.739\n",
+      "param:cycle_r5_advL1_l10 source:A std:0.030743 sum:67.930000 overall:148.739\n",
+      "param:cycle_r5_advL1_l10 source:B std:0.042452 sum:80.809000 overall:148.739\n",
+      "param:cycle_r5_advL1_l5 source:A std:0.030743 sum:67.930000 overall:148.739\n",
+      "param:cycle_r5_advL1_l5 source:B std:0.042452 sum:80.809000 overall:148.739\n"
      ]
     }
    ],
