--- a/execute-maps.ipynb
+++ b/execute-maps.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "cell_id": "00004-69591244-834e-497c-9fa0-2eb3d0f0c2dc",
     "deepnote_cell_type": "code",
@@ -132,7 +132,7 @@
     "root_path_data = \"./data/\"+databaseName\n",
     "root_path_checkpoints = \"./checkpoints/\"+databaseName\n",
     "\n",
-    "targetEpoch = 2\n",
+    "targetEpoch = 50\n",
     "saveAt = 1 #how often to store the model at training\n",
     "print(\"the device ist at\")\n",
     "print(device)\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,29 +374,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "param:cycle_r9_advMSE_l10 source:A std:0.020727 sum:42.331000 overall:200.31400000000002\n",
-      "param:cycle_r9_advMSE_l10 source:B std:0.027450 sum:157.983000 overall:200.31400000000002\n",
-      "param:cycle_r9_advMSE_l5 source:A std:0.019033 sum:41.606000 overall:198.77599999999998\n",
-      "param:cycle_r9_advMSE_l5 source:B std:0.027498 sum:157.170000 overall:198.77599999999998\n",
-      "param:cycle_r9_advL1_l10 source:A std:0.018360 sum:41.249000 overall:205.97\n",
-      "param:cycle_r9_advL1_l10 source:B std:0.027445 sum:164.721000 overall:205.97\n",
-      "param:cycle_r9_advL1_l5 source:A std:0.018212 sum:40.860000 overall:205.512\n",
-      "param:cycle_r9_advL1_l5 source:B std:0.027137 sum:164.652000 overall:205.512\n",
-      "param:cycle_r5_advMSE_l10 source:A std:0.017783 sum:41.123000 overall:198.801\n",
-      "param:cycle_r5_advMSE_l10 source:B std:0.028439 sum:157.678000 overall:198.801\n",
-      "param:cycle_r5_advMSE_l5 source:A std:0.018145 sum:41.852000 overall:196.74\n",
-      "param:cycle_r5_advMSE_l5 source:B std:0.025475 sum:154.888000 overall:196.74\n",
-      "param:cycle_r5_advL1_l10 source:A std:0.019074 sum:42.191000 overall:201.615\n",
-      "param:cycle_r5_advL1_l10 source:B std:0.027110 sum:159.424000 overall:201.615\n",
-      "param:cycle_r5_advL1_l5 source:A std:0.016964 sum:40.414000 overall:203.21800000000002\n",
-      "param:cycle_r5_advL1_l5 source:B std:0.027058 sum:162.804000 overall:203.21800000000002\n"
+      "param:cycle_r9_advMSE_l10 \t source:A \t std:0.0060 \t sum:5.90 \t overall:49.08\n",
+      "param:cycle_r9_advMSE_l10 \t source:B \t std:0.0118 \t sum:43.19 \t overall:49.08\n",
+      "param:cycle_r9_advMSE_l5 \t source:A \t std:0.0055 \t sum:5.36 \t overall:52.99\n",
+      "param:cycle_r9_advMSE_l5 \t source:B \t std:0.0128 \t sum:47.63 \t overall:52.99\n",
+      "param:cycle_r9_advL1_l10 \t source:A \t std:0.0062 \t sum:5.94 \t overall:46.40\n",
+      "param:cycle_r9_advL1_l10 \t source:B \t std:0.0115 \t sum:40.46 \t overall:46.40\n",
+      "param:cycle_r9_advL1_l5 \t source:A \t std:0.0060 \t sum:6.20 \t overall:46.05\n",
+      "param:cycle_r9_advL1_l5 \t source:B \t std:0.0111 \t sum:39.84 \t overall:46.05\n",
+      "param:cycle_r5_advMSE_l10 \t source:A \t std:0.0062 \t sum:6.10 \t overall:50.48\n",
+      "param:cycle_r5_advMSE_l10 \t source:B \t std:0.0127 \t sum:44.38 \t overall:50.48\n",
+      "param:cycle_r5_advMSE_l5 \t source:A \t std:0.0062 \t sum:6.01 \t overall:47.78\n",
+      "param:cycle_r5_advMSE_l5 \t source:B \t std:0.0122 \t sum:41.77 \t overall:47.78\n",
+      "param:cycle_r5_advL1_l10 \t source:A \t std:0.0056 \t sum:5.73 \t overall:50.90\n",
+      "param:cycle_r5_advL1_l10 \t source:B \t std:0.0119 \t sum:45.16 \t overall:50.90\n",
+      "param:cycle_r5_advL1_l5 \t source:A \t std:0.0054 \t sum:5.34 \t overall:45.15\n",
+      "param:cycle_r5_advL1_l5 \t source:B \t std:0.0117 \t sum:39.81 \t overall:45.15\n"
      ]
     }
    ],
@@ -407,7 +407,7 @@
     "        summ = np.array(losses[paramItem.name][source]).sum()\n",
     "        std = np.std(losses[paramItem.name][source])\n",
     "        overall = np.array(losses[paramItem.name]['A']).sum() + np.array(losses[paramItem.name]['B']).sum()\n",
-    "        print(\"param:{} source:{} std:{:2f} sum:{:0f} overall:{}\".format(paramItem.name,source,std,summ,overall))"
+    "        print(\"param:{} \\t source:{} \\t std:{:.4f} \\t sum:{:.2f} \\t overall:{:.2f}\".format(paramItem.name,source,std,summ,overall))"
    ]
   },
   {
